# backend/src/routes.ts
@@ -2,6 +2,7 @@ import {Router} from 'express';
 import Puppeteer from './Puppeteer/buscaProdutos';
 import ControllerPost from './Controllers/ControllersPost/ControllersPost';
 import ControllerGet from './Controllers/ControllersGet/ControllersGet';
+import ControllerPut from './Controllers/ControllersPut/ControllersPut';
 
 const router = Router();
 
@@ -9,7 +10,8 @@ router.get('/BuscarProdutos', new Puppeteer().buscaProdutosConfiança)
 
 
 router.post('/CadastroUsuarios', new ControllerPost().cadastro_Usuarios)
-router.post('/BuscaUsuariosUnico/:id', new ControllerPost().BuscaUsuarioUnico)
 router.get('/BuscaUsuarios', new ControllerGet().BuscaUsuarios)
+router.post('/BuscaUsuariosUnico/:id', new ControllerPost().BuscaUsuarioUnico)
+router.put('/AlteraDadosUsuario/:id', new ControllerPut().AlteraDadosUsuario)
 
 export default router;
